Implements custom Json serializer